--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <br>
           <table>
                <tr>
+                    <td>Country</td>
                     <td>Location </td>
                     <td>Time</td>
                     <td>Temperature (&deg;F)</td>
@@ -40,6 +41,7 @@
                     <td>Humidity</td>
                </tr>
                <tr>
+                    <td class="weather-country"></td>
                     <td class="weather-location"> </td>
                     <td class="weather-time"></td>
                     <td class="weather-temp-f"></td>
