--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
      <link rel="stylesheet" href="style.css">
      <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Math&family=Poppins:wght@400;700&family=Quicksand&display=swap"
           rel="stylesheet">
-     <title>Weather App </title>
+     <link rel="shortcut icon" href="Weather-No-Background.png" type="image/x-icon">
+     <title>Weather App -Mousam Update  </title>
 </head>
 
 <body>
